@@ -8,7 +8,7 @@ using `glibc' in the "product" field.
 Version 2.17.1
 
 * The following bugs are resolved with this release:
-  15003, 15006, 15055, 15122, 15759.
+  15003, 15006, 15055, 15122, 15497, 15759.
 
 
 Version 2.17
